mise en place envoi mail

--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Inscription{% endblock %}
     
 {% block body %}
 {% for flash_message in app.session.flashBag.get('error') %}
