--- a/templates/admin/logement/index.html.twig
+++ b/templates/admin/logement/index.html.twig
@@ -20,6 +20,7 @@
         </thead>
         <tbody>
         {% for logement in logements %}
+        {{ dump(logement) }}
             <tr>
                 <td>{{ logement.id }}</td>
                 <td>{{ logement.nom }}</td>
@@ -29,7 +30,7 @@
                 <td>{{ logement.nbSalledeBain }}</td>
                 <td>{{ logement.prix }}</td>
                 <td>
-                    <a href="{{ path('utilisateur_edit', {'id': logement.id_proprietaire}) }}">Voir proprio</a>
+                    <a href="{{ path('utilisateur_edit', {'id': logement.getIdProprietaire().getId()}) }}">Voir proprio</a>
                     <a href="{{ path('logement_edit', {'id': logement.id}) }}">Modifier</a>
                 </td>
             </tr>
