--- a/templates/home/recherche.html.twig
+++ b/templates/home/recherche.html.twig
@@ -1,17 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Recherche{% endblock %}
 
 {% block body %}
 <header>
-    <img id ="logo" src="logo2.png">
+    <img id ="logo" src="{{ asset('dist/img/logo.png') }}">
     <div id="title"><a href="index.html">Atypik House</a></div>
     <button id="btnInscrire" type="button" class="btn btn-success"><p>S'inscrire</p></button>
     <button id="btnConnecter" class="btn btn-primary"><p>Se connecter</p></button>
 </header>
 
 <div id="formulaire">
-  </div>
+  <img src="{{ asset('dist/img/imageFormRecherche.png') }}">
+</div>
   <br/>
   <div class="container">
     <!-- Example row of columns -->
@@ -22,7 +23,7 @@
     <div class="card-deck">
 
       <div class="card">
-        <img class="card-img-top" src="cabane.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ asset('dist/img/cabane.jpg') }}" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Cabane dans le ciel</h4>
           <h5 class="card-title">LIMOGES - 122€ /nuit </h5>
@@ -30,7 +31,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="yourte.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ asset('dist/img/yourte.jpg') }}" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Yourte</h4>
           <h5 class="card-title">BRETAGNE - 100€ /nuit </h5>
@@ -38,7 +39,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="bulle.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ asset('dist/img/bulle.jpg') }}" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Bulle et la bête</h4>
           <h5 class="card-title">PARIS - 115€ /nuit </h5>
@@ -47,11 +48,11 @@
       </div>
     </div>
   </div>
-
+  <br/><br/>
   <div class="row">
     <div class="card-deck">
       <div class="card">
-        <img class="card-img-top" src="cabane.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ asset('dist/img/cabane.jpg') }}" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Cabane dans le ciel</h4>
           <h5 class="card-title">LIMOGES - 122€ /nuit </h5>
@@ -59,7 +60,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="yourte.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ asset('dist/img/yourte.jpg') }}" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Yourte</h4>
           <h5 class="card-title">BRETAGNE - 100€ /nuit </h5>
@@ -67,7 +68,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="bulle.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ asset('dist/img/bulle.jpg') }}" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Bulle et la bête</h4>
           <h5 class="card-title">PARIS - 115€ /nuit </h5>
@@ -76,11 +77,11 @@
       </div>
     </div>
   </div>
-
+  <br/><br/>
   <div class="row">
     <div class="card-deck">
       <div class="card">
-        <img class="card-img-top" src="cabane.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ asset('dist/img/cabane.jpg') }}" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Cabane dans le ciel</h4>
           <h5 class="card-title">LIMOGES - 122€ /nuit </h5>
@@ -88,7 +89,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="yourte.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ asset('dist/img/yourte.jpg') }}" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Yourte</h4>
           <h5 class="card-title">BRETAGNE - 100€ /nuit </h5>
@@ -96,7 +97,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="bulle.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ asset('dist/img/bulle.jpg') }}" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Bulle et la bête</h4>
           <h5 class="card-title">PARIS - 115€ /nuit </h5>
