Ajout du footer dans base #5

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,16 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+
+           <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">Colonne Menu 1</div>
+                    <div class="col-lg-4">Colonne Menu 2</div>
+                    <div class="col-lg-4">Colonne Menu 3</div>
+                </div>
+            </div>
+            </footer>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
