--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -5,7 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link href="{{ asset('dist/css/bootstrap.min.css') }}" rel="stylesheet">
-            <link href="{{ asset('dist/css/styles.css') }}" rel="stylesheet">
+            <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
         {% endblock %}
     </head>
     <body>
@@ -27,7 +27,9 @@
                 </div>
             </nav>
         </header>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <div class="container">
+            {% block body %}{% endblock %}
+            {% block javascripts %}{% endblock %}
+        </div>
     </body>
 </html>
