--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -23,6 +23,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Utilisateurs</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('parametres_type_index') }}">Paramètres des logements</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
