création de paramètre pour un type - #6

--- a/templates/admin/parametres-type/parametres-type-edit.html.twig
+++ b/templates/admin/parametres-type/parametres-type-edit.html.twig
@@ -5,7 +5,11 @@
 {% block body %}
     <h1>Edit ParametresType</h1>
 
-    {{ include('parametres_type/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_end(form) }}
+
 
     <a href="{{ path('parametres_type_index') }}">back to list</a>
 
