création + modif + listing parametres - #6

--- a/templates/admin/parametres-type/parametres-type-edit.html.twig
+++ b/templates/admin/parametres-type/parametres-type-edit.html.twig
@@ -1,17 +1,23 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-bo.html.twig' %}
 
-{% block title %}Edit ParametresType{% endblock %}
+{% block title %}Paramètre > Modification{% endblock %}
 
 {% block body %}
-    <h1>Edit ParametresType</h1>
-
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
-
-
-    <a href="{{ path('parametres_type_index') }}">back to list</a>
-
-    {{ include('parametres_type/_delete_form.html.twig') }}
+    {% for flash_message in app.session.flashBag.get('error') %}
+        <div class="alert alert-error">
+            {{ flash_message }}
+        </div>
+    {% endfor %}
+    <div class="row mx-auto my-2">
+        <a href="{{ path('parametres_type_index') }}">Retour</a>
+    </div>
+    <h3>Modifier un paramètre</h3>
+    <div class="row">
+        <div class="col">
+            {{ form_start(form) }}
+            {{ form_widget(form) }}
+            <button class="btn btn-success my-2">{{ button_label|default('Mettre à jour') }}</button>
+            {{ form_end(form) }}
+        </div>
+    </div>
 {% endblock %}
