--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="#">Utilisateurs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('parametres_type_index') }}">Paramètres des logements</a>
+                            <a class="nav-link" href="{{ path('parametres_type_index', {'type': 0}) }}">Paramètres</a>
                         </li>
                     </ul>
                 </div>
