--- a/templates/admin/parametres-type/parametres-type-index.html.twig
+++ b/templates/admin/parametres-type/parametres-type-index.html.twig
@@ -13,19 +13,22 @@
         <a href="{{ path('parametres_type_new') }}" class="btn btn-primary">Ajouter un paramètre</a>
     </div>
     <div class="row mx-auto">
-        <select class="form-control">
-            {% for type in types %}
-                <option value="{{ type.id }}" onclick="location.href='{{ path('parametres_type_index', {'type': type.id}) }}';">{{ type.type }}</option>
-            {% endfor %}
-        </select>
+        <form method="get" action="">
+            <select class="form-control" name="type">
+                <option value="" disabled {{ typeSelect is empty ? 'selected' : '' }}>Sélectionnez un type de logement</option>
+                {% for type in types %}
+                    <option value="{{ type.id }}" onclick="console.log('{{ type.id }}')" {{ typeSelect == type.id ? 'selected' : '' }}>{{ type.type }}</option>
+                {% endfor %}
+            </select>
+        </form>
     </div>
     <div class="row mx-auto my-2"> 
         {% if typeSelect %}        
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Nom</th>
-                        <th>actions</th>
+                        <th>Paramètre</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
