--- a/templates/admin/logement/logement-edit.html.twig
+++ b/templates/admin/logement/logement-edit.html.twig
@@ -3,11 +3,19 @@
 {% block title %}Edit Logement{% endblock %}
 
 {% block body %}
-    <h1>Edit Logement</h1>
-
-    {{ include('logement/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('logement_index') }}">back to list</a>
-
-    {{ include('logement/_delete_form.html.twig') }}
+    <div class="row mx-auto my-2">
+        <a href="{{ path('logement_liste') }}">Retour</a>
+    </div>
+    <h1>Modification d'un logement</h1>
+    {% for flash_message in app.session.flashBag.get('error') %}
+        <div class="alert alert-error">
+            {{ flash_message }}
+        </div>
+    {% endfor %}   
+    <br>
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <br>
+        <button class="btn btn-success">Mettre à jour</button>
+    {{ form_end(form) }}
 {% endblock %}
