--- a/templates/admin/logement/logement-show.html.twig
+++ b/templates/admin/logement/logement-show.html.twig
@@ -38,7 +38,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('logement_index') }}">back to list</a>
+    <a href="{{ path('logement_liste') }}">back to list</a>
 
     <a href="{{ path('logement_edit', {'id': logement.id}) }}">edit</a>
 
