--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -18,7 +18,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('logement_index') }}">Logements</a>
+                            <a class="nav-link" href="{{ path('logement_liste') }}">Logements</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Utilisateurs</a>
