--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            <link href="{{ asset('dist/css/bootstrap.min.css') }}" rel="stylesheet">
-            <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
     <body>
