--- a/templates/admin/logement/logement-new.html.twig
+++ b/templates/admin/logement/logement-new.html.twig
@@ -15,6 +15,8 @@
     <br>
     {{ form_start(form) }}
         {{ form_widget(form) }}
+        <div id="parametres">
+        </div>
         <br>
         <button class="btn btn-success">Mettre à jour</button>
     {{ form_end(form) }}
