--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="/css/bootstrap.min.css">
         {% endblock %}
     </head>
     <body>
@@ -31,7 +31,11 @@
         </header>
         <div class="container">
             {% block body %}{% endblock %}
-            {% block javascripts %}{% endblock %}
+            {% block javascripts %}
+                <script src="/js/jquery.min.js"></script>
+                <script src="/js/bootstrap.min.js"></script>
+                <script src="/js/bo.js"></script>
+            {% endblock %}
         </div>
     </body>
 </html>
