--- a/templates/admin/logement/logement-new.html.twig
+++ b/templates/admin/logement/logement-new.html.twig
@@ -18,6 +18,6 @@
         <div id="parametres">
         </div>
         <br>
-        <button class="btn btn-success">Mettre à jour</button>
+        <button class="btn btn-success">Enregistrer</button>
     {{ form_end(form) }}
 {% endblock %}
