--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('parametres_type_index', {'type': 0}) }}">Paramètres</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Taxes (Ville)</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
