--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            {# 'app' must match the first argument to addEntry() in webpack.config.js #}
-            
+            <link rel="stylesheet" href="/css/bootstrap.min.css">            
         {% endblock %}
     </head>
     <body>
