--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,9 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}
+        {% block link %}
            <link rel="stylesheet" href="/css/bootstrap.min.css">
            <link rel="stylesheet" href="/css/styles.css">
+           <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+           <script type="text/javascript" src="/js/jquery.min.js"></script>
+           <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+           <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+           <script type="text/javascript" src="/js/slider.js"></script>
+
         {% endblock %}
     </head>
     <body>
@@ -21,8 +27,7 @@
             </div>
             </footer>
         {% block javascripts %}
-        <script type="text/javascript" src="/js/jquery.min.js"></script>
-        <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+
         {% endblock %}
     </body>
 </html>
