--- a/templates/home/produit.html.twig
+++ b/templates/home/produit.html.twig
@@ -38,7 +38,7 @@
     <button type="button" class="btn btn-recherche">Valider</button>
   </form>
   <button type="button" class="btn btn-photo"  onclick="openModal();currentSlide(1)">Voir les photos</button>
-  <img src="/img/imageFormRecherche.png"/>
+  <img src="/img/cabane2.jpg"/>
   
 </div>
 
@@ -48,22 +48,22 @@
 
     <div class="mySlides">
       <div class="nombre">1 / 4</div>
-      <img src="/img/cabane.jpg" style="width:100%">
+      <img src="/img/cabane2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="nombre">2 / 4</div>
-      <img src="/img/yourte.jpg" style="width:100%">
+      <img src="/img/cabane3.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="nombre">3 / 4</div>
-      <img src="/img/bulle.jpg" style="width:100%">
+      <img src="/img/cabane4.jpg" style="width:100%">
     </div>
     
     <div class="mySlides">
       <div class="nombre">4 / 4</div>
-      <img src="/img/cabane.jpg" style="width:100%">
+      <img src="/img/cabane5.jpg" style="width:100%">
     </div>
     
     <a class="precedent" onclick="plusSlides(-1)">&#10094;</a>
@@ -75,16 +75,16 @@
 
 
     <div class="colonne">
-      <img class="demo cursor" src="/img/cabane.jpg" style="width:100%" onclick="currentSlide(1)" alt="Photo 1">
+      <img class="demo cursor" src="/img/cabane2.jpg" style="width:100%" onclick="currentSlide(1)" alt="Photo 1">
     </div>
     <div class="colonne">
-      <img class="demo cursor" src="/img/yourte.jpg" style="width:100%" onclick="currentSlide(2)" alt="Photo 2">
+      <img class="demo cursor" src="/img/cabane3.jpg" style="width:100%" onclick="currentSlide(2)" alt="Photo 2">
     </div>
     <div class="colonne">
-      <img class="demo cursor" src="/img/bulle.jpg" style="width:100%" onclick="currentSlide(3)" alt="Photo 3">
+      <img class="demo cursor" src="/img/cabane4.jpg" style="width:100%" onclick="currentSlide(3)" alt="Photo 3">
     </div>
-    <div class="colonne">
-      <img class="demo cursor" src="/img/cabane.jpg" style="width:100%" onclick="currentSlide(4)" alt="Photo 4">
+    <div class="colonne"> 
+      <img class="demo cursor" src="/img/cabane5.jpg" style="width:100%" onclick="currentSlide(4)" alt="Photo 4">
     </div>
   </div>
 </div>
@@ -132,7 +132,63 @@
     <center>
       <h4>Services et options disponibles</h4>
       <br/>
+    <div class="row">
+      <div class="col-lg-4">
+        <img class="picto_prod" src="/img/services/coffee.png" alt="Coffee">
+        <br/>
+        Petit déjeuné
+      </div>
+      <div class="col-lg-4">
+        <img class="picto_prod" src="/img/services/wifi.png" alt="Wifi">
+        <br/>
+        Wifi
+      </div>
+      <div class="col-lg-4">
+        <img class="picto_prod" src="/img/services/snow.png" alt="Clim">
+        <br/>
+        Climatisation
+      </div>
+    </div>
+    <br/>
+    <div class="row">
+      <div class="col-lg-4">
+        <img class="picto_prod" src="/img/services/shower.png" alt="shower">
+        <br/>
+        Douche
+      </div>
+      <div class="col-lg-4">
+        <img class="picto_prod" src="/img/services/bathtub.png" alt="bathtub">
+        <br/>
+        Bain
+      </div>
+      <div class="col-lg-4">
+        <img class="picto_prod" src="/img/services/heating.png" alt="heating">
+        <br/>
+        Chauffage
+      </div>
+    </div>
+     <br/>
+    <div class="interdit">Non autorisé</div>
+    <br/>
+    <div class="row">
+      <div class="col-lg-4">
+        <img class="picto_prod" src="/img/services/dog.png" alt="dog">
+        <br/>
+        Pas d’animaux
+      </div>
+      <div class="col-lg-4">
+        <img class="picto_prod" src="/img/services/fire.png" alt="fire">
+        <br/>
+        Non fumeur
+      </div>
+      <div class="col-lg-4">
+        <img class="picto_prod" src="/img/services/BBQ.png" alt="BBQ">
+        <br/>
+        Pas de barbecue
+      </div>
+    </div>
     </center>
+   
     </div>
   </div>
   <br/>
