--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,19 +1,166 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+h2.contactTitle {
+	position: absolute;
+	top: 14em;
+	left: 4em;
+	color: white;
+	font-weight: bold;
+}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
+h3 {
+    padding: 1em 0 1em 0;
+}
+
+#nightDream {
+    margin-top: 3em;
+}
+
+#nightDream .row {
+    margin-bottom: 3em;
+}
+
+#nightDream img {
+    width: 100%;
+}
+
+#nightDream .content {
+    width: 100%;
+    padding: 0 8em;
+}
+
+.no-gutters {
+    margin-right: 0;
+    margin-left: 0;
+}
+
+.no-gutters .col, [class*="col-"] {
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.carousel-item img {
+    width: 33%;
+}
+
+</style>
+
+<div id="formulaire">
+    <form>
+        <div class="form-group">
+            <select class="form-control" id="selectHousingType">
+                <option>Type de logement</option>
+                <option>Yourte</option>
+                <option>Bulle</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <select class="form-control" id="selectLocation">
+                <option>Lieu</option>
+                <option>Bordeaux</option>
+                <option>Lyon</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" id="inputArrivalDate" placeholder="Date d'arrivée">
+            <script>
+                $('#inputArrivalDate').datepicker({
+                    uiLibrary: 'bootstrap4'
+                });
+            </script>
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" id="inputDepartureDate" placeholder="Date de départ">
+            <script>
+                $('#inputDepartureDate').datepicker({
+                    uiLibrary: 'bootstrap4'
+                });
+            </script>
+        </div>
+        <div class="form-group">
+            <select class="form-control" id="selectTravelers">
+                <option>Voyageurs</option>
+                <option>1</option>
+                <option>2</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-recherche">Rechercher</button>
+    </form>
+    <img src="/img/imageFormRecherche.png"/>
+</div>
+
+<div class="container">
+    <div class="row">
+        <h3>Nos différents types de Logements</h3>
+        <div id="housingTypes" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="d-block w-100">
+                        <img src="https://a0.muscache.com/im/pictures/1faf9a4c-f839-44da-bd37-65ddc928379e.jpg?aki_policy=large">
+                        <img src="https://a0.muscache.com/im/pictures/45680811/f4987a12_original.jpg?aki_policy=large">
+                        <img src="https://a0.muscache.com/im/pictures/29099674/7e3509fe_original.jpg?aki_policy=large">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="d-block w-100">
+                        <img src="https://a0.muscache.com/im/pictures/1faf9a4c-f839-44da-bd37-65ddc928379e.jpg?aki_policy=large">
+                        <img src="https://a0.muscache.com/im/pictures/45680811/f4987a12_original.jpg?aki_policy=large">
+                        <img src="https://a0.muscache.com/im/pictures/29099674/7e3509fe_original.jpg?aki_policy=large">
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#housingTypesControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#housingTypesControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+</div>
+
+<div id="nightDream" class="container-fluid">
+    <div class="container">
+        <h3>Où désirez vous passer une nuit de rêve ?</h3>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 no-gutters">
+            <img src="https://a0.muscache.com/im/pictures/0e25bbd4-d081-4bab-85de-a8fd05245b53.jpg?aki_policy=large"/>
+        </div>
+        <div class="col-sm-6 d-flex align-items-center">
+            <div class="content">
+                <h4>Get some perspective</h4>
+                <p>Take your trip to new heights with these one-of-a-kind treehouses.</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 d-flex align-items-center">
+            <div class="content">
+                <h4>Sail the high seas</h4>
+                <p>Follow in the footsteps of adventurers past with boats of all shapes and sizes.</p>
+            </div>
+        </div>
+        <div class="col-sm-6 no-gutters">
+            <img src="https://a0.muscache.com/im/pictures/1df93d87-26a5-4c5e-8a91-b37ccb173aa1.jpg?aki_policy=large"/>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 no-gutters">
+            <img src="https://a0.muscache.com/im/pictures/408ad1e8-0367-4cb7-be52-6d7bfcc9d046.jpg?aki_policy=large"/>
+        </div>
+        <div class="col-sm-6 d-flex align-items-center">
+            <div class="content">
+                <h4>Made just for glamping</h4>
+                <p>Embrace a mix of indoor comfort and the great outdoors.</p>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
